add separate tests to SysmMapTest for ZGC case